--- a/app/src/main/res/drawable/rectangle_outline_red_radius_8dp.xml
+++ b/app/src/main/res/drawable/rectangle_outline_red_radius_8dp.xml
@@ -5,7 +5,7 @@
   <!-- View border color and width -->
   <stroke
       android:width="1dp"
-      android:color="#e44b46" />
+      android:color="@color/remove_wallet_red" />
 
   <!-- The radius makes the corners rounded -->
   <corners android:radius="8dp" />
