--- a/app/src/main/res/layout-land/fragment_iab_error.xml
+++ b/app/src/main/res/layout-land/fragment_iab_error.xml
@@ -23,17 +23,12 @@
 
   <TextView
       android:id="@+id/error_title"
+      style="@style/PaymentMethods.Error.Title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
-      android:fontFamily="sans-serif"
-      android:letterSpacing="0.03"
-      android:lineSpacingExtra="4sp"
       android:text="@string/error_general"
       android:textAlignment="center"
-      android:textColor="@color/btn_light_enabled_color"
-      android:textSize="20sp"
-      android:textStyle="bold"
       android:visibility="visible"
       app:layout_constraintBottom_toTopOf="@id/error_message"
       app:layout_constraintEnd_toEndOf="parent"
