--- a/app/src/main/res/layout/fragment_iab_error.xml
+++ b/app/src/main/res/layout/fragment_iab_error.xml
@@ -36,7 +36,7 @@
 
   <TextView
       android:id="@+id/error_message"
-      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      style="@style/PaymentMethods.Error.Message"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="16dp"
@@ -44,8 +44,6 @@
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="8dp"
       android:textAlignment="center"
-      android:textColor="@color/pending_payment_text_color"
-      android:textSize="16sp"
       app:layout_constraintBottom_toTopOf="@+id/contact_us"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
