--- a/app/src/main/res/layout-land/fragment_iab_error.xml
+++ b/app/src/main/res/layout-land/fragment_iab_error.xml
@@ -56,14 +56,12 @@
 
   <TextView
       android:id="@+id/contact_us"
-      style="@style/TextAppearance.AppCompat.Body1.Roboto.Regular"
+      style="@style/PaymentMethods.Error.Disclaimer"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/big_margin"
       android:text="@string/error_contac_us_body"
       android:textAlignment="center"
-      android:textColor="@color/grey_8a_alpha"
-      android:textSize="12sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/error_message"
