--- a/app/src/main/res/values/styles_payment_methods.xml
+++ b/app/src/main/res/values/styles_payment_methods.xml
@@ -82,4 +82,9 @@
     <item name="android:textSize">16sp</item>
   </style>
 
+  <style name="PaymentMethods.Error.Disclaimer" parent="@style/TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textColor">@color/grey_8a_alpha</item>
+    <item name="android:textSize">12sp</item>
+  </style>
+
 </resources>
