[WAL-74] Fixed navigation. Updated code fragment

--- a/app/src/main/res/layout-land/fragment_verification_intro.xml
+++ b/app/src/main/res/layout-land/fragment_verification_intro.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/MaterialAppTheme"
     >
 
   <ScrollView
@@ -11,7 +12,6 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
-      android:theme="@style/MaterialAppTheme"
       >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -110,7 +110,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           />
 
-      <Button
+      <com.google.android.material.button.MaterialButton
           android:id="@+id/cancel"
           style="@style/VerifyWallet.Cancel.Button"
           android:layout_width="wrap_content"
