--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -812,13 +812,14 @@
     <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1.Roboto.Regular</item>
     <item name="android:textColor">@color/real_black</item>
     <item name="android:textSize">16sp</item>
+    <item name="android:inputType">number</item>
     <item name="android:gravity">start|center_vertical</item>
     <item name="android:paddingStart">12dp</item>
+    <item name="android:paddingTop">6dp</item>
+    <item name="android:paddingBottom">7dp</item>
     <item name="android:paddingEnd">12dp</item>
     <item name="android:lineSpacingExtra">3sp</item>
     <item name="android:letterSpacing">0.01</item>
-    <item name="android:ems">4</item>
-    <item name="android:maxEms">4</item>
   </style>
 
   <style name="VerifyWallet.Submit.Button" parent="@style/MaterialButtonStyle" />
@@ -829,7 +830,7 @@
     <item name="android:fontFamily">sans-serif-medium</item>
     <item name="android:lineSpacingExtra">2sp</item>
     <item name="android:textStyle">normal</item>
-    <item name="android:background">@drawable/borderless_button_background</item>
+    <item name="rippleColor">@color/button_borderless_ripple_color</item>
   </style>
 
   <style name="VerifyWallet.Example.Title" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
