--- a/app/src/main/res/values/styles_payment_methods.xml
+++ b/app/src/main/res/values/styles_payment_methods.xml
@@ -43,6 +43,13 @@
     <item name="android:textSize">12sp</item>
   </style>
 
+  <style name="PaymentMethods.Carrier.PhoneFieldError">
+    <item name="android:textColor">@color/remove_wallet_red</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:fontFamily">sans-serif</item>
+    <item name="android:textStyle">normal</item>
+  </style>
+
   <style name="PaymentMethods.Carrier.PhoneNumberLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
     <item name="android:background">@null</item>
     <item name="android:textColorHint">@color/grey</item>
