--- a/app/src/main/res/layout-land/fragment_verification_intro.xml
+++ b/app/src/main/res/layout-land/fragment_verification_intro.xml
@@ -116,6 +116,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="56dp"
+          android:layout_marginEnd="@dimen/normal_margin"
           android:layout_marginBottom="22dp"
           android:text="@string/cancel"
           app:layout_constraintBottom_toBottomOf="parent"
