--- a/app/src/main/res/layout/fragment_verification_code.xml
+++ b/app/src/main/res/layout/fragment_verification_code.xml
@@ -132,7 +132,7 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="56dp"
-          android:layout_marginEnd="@dimen/big_margin"
+          android:layout_marginEnd="@dimen/normal_margin"
           android:text="@string/backup_tooltip_later_button"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toStartOf="@id/confirm"
