--- a/app/src/main/res/layout/backup_tooltip.xml
+++ b/app/src/main/res/layout/backup_tooltip.xml
@@ -69,7 +69,7 @@
       android:id="@+id/arrow_up_tip"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="16dp"
+      android:layout_marginEnd="15dp"
       android:elevation="1dp"
       android:src="@drawable/ic_tooltip_arrow_up"
       app:layout_constraintBottom_toTopOf="@id/backup_tooltip"
@@ -77,8 +77,8 @@
       app:layout_constraintTop_toTopOf="parent"
       />
   <ImageView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="26dp"
+      android:layout_height="26dp"
       android:layout_marginBottom="10dp"
       android:src="@drawable/ic_backup_white"
       app:layout_constraintBottom_toTopOf="@id/arrow_up_tip"
