--- a/app/src/main/res/layout/layout_unverified.xml
+++ b/app/src/main/res/layout/layout_unverified.xml
@@ -11,8 +11,8 @@
       style="@style/BalanceVerifyWalletChip.Unverified"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"
+      android:layout_marginStart="@dimen/big_margin"
+      android:layout_marginEnd="@dimen/normal_margin"
       android:text="@string/unferified_tag"
       app:drawableStartCompat="@drawable/ic_wallet_unverified_chip"
       app:layout_constraintBottom_toBottomOf="parent"
@@ -26,18 +26,18 @@
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="6dp"
-      android:layout_marginEnd="16dp"
+      android:layout_marginEnd="@dimen/big_margin"
       android:layout_marginBottom="6dp"
       android:text="@string/verification_wallets_verify_button"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="1"
-      app:layout_constraintStart_toStartOf="@id/horizontal_guideline"
+      app:layout_constraintStart_toStartOf="@id/vertical_guideline"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintWidth_default="wrap"
       />
   <androidx.constraintlayout.widget.Guideline
-      android:id="@+id/horizontal_guideline"
+      android:id="@+id/vertical_guideline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
