--- a/app/src/main/res/drawable/background_edittext.xml
+++ b/app/src/main/res/drawable/background_edittext.xml
@@ -8,7 +8,7 @@
   </item>
   <item android:state_focused="true">
     <shape>
-      <stroke android:width="1dp" android:color="@color/real_black" />
+      <stroke android:width="1dp" android:color="@color/black" />
       <corners android:radius="3dp" />
     </shape>
   </item>
