--- a/app/src/main/res/layout/activity_wallet_verification.xml
+++ b/app/src/main/res/layout/activity_wallet_verification.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.asfoundation.wallet.wallet_verification.WalletVerificationActivity"
+    tools:context="com.asfoundation.wallet.verification.WalletVerificationActivity"
     >
 
   <include
