--- a/app/src/main/res/layout/fragment_carrier_confirm.xml
+++ b/app/src/main/res/layout/fragment_carrier_confirm.xml
@@ -38,6 +38,7 @@
       android:layout_marginTop="25dp"
       android:layout_marginEnd="16dp"
       android:adjustViewBounds="true"
+      android:scaleType="centerInside"
       app:layout_constraintBottom_toTopOf="@+id/fee_title"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
