[WAL-110] Added locked promotions screen layout and logic.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
   <color name="black">#000000</color>
   <color name="fakeBlack">#313849</color>
   <color name="appc_pink">#fe7073</color>
+  <color name="navy_blue">#001726</color>
 
   <color name="colorPrimary">#fc9d48</color>
   <color name="colorPrimaryDark">#e44b46</color>
