--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -850,4 +850,10 @@
     <item name="android:textSize">14sp</item>
     <item name="android:textColor">@color/fakeBlack</item>
   </style>
+
+  <style name="LockedPromotionsStyle" parent="TextAppearance.AppCompat.Body1.Roboto.Regular">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textColor">@color/navy_blue</item>
+    <item name="android:lineSpacingExtra">8sp</item>
+  </style>
 </resources>
