--- a/app/src/main/res/layout/locked_promotions_layout.xml
+++ b/app/src/main/res/layout/locked_promotions_layout.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
-
-  <ImageView
-      android:id="@+id/locked_promotions_image"
-      android:layout_width="wrap_content"
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:src="@drawable/ic_locked_promotions"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      />
+      android:paddingTop="16dp"
+      android:paddingBottom="16dp"
+      >
+    <ImageView
+        android:id="@+id/locked_promotions_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_locked_promotions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
-  <!-- TODO change for correct string -->
-  <TextView
-      android:id="@+id/locked_promotions_message"
-      style="@style/LockedPromotionsStyle"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="26dp"
-      android:layout_marginTop="46dp"
-      android:layout_marginEnd="26dp"
-      android:gravity="center"
-      android:text="@string/referral_dropup_menu_requirements_purchase"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/locked_promotions_image"
-      />
+    <!-- TODO change for correct string -->
+    <TextView
+        android:id="@+id/locked_promotions_message"
+        style="@style/LockedPromotionsStyle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="46dp"
+        android:layout_marginEnd="26dp"
+        android:gravity="center"
+        android:text="@string/referral_dropup_menu_requirements_purchase"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/locked_promotions_image"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
