--- a/app/src/main/res/drawable/borderless_list_button_ripple.xml
+++ b/app/src/main/res/drawable/borderless_list_button_ripple.xml
@@ -3,7 +3,7 @@
     android:color="#c9c9c9">
   <item android:id="@android:id/mask">
     <shape android:shape="rectangle">
-      <solid android:color="#c9c9c9" />
+      <solid android:color="@color/btn_disable_snd_color" />
     </shape>
   </item>
   <item>
