--- a/app/src/main/res/layout/fragment_rating_entry.xml
+++ b/app/src/main/res/layout/fragment_rating_entry.xml
@@ -40,32 +40,18 @@
 
   <Button
       android:id="@+id/yes_button"
-      style="@style/CancelBorderlessButtonStyle"
-      android:layout_width="wrap_content"
-      android:layout_height="@dimen/button_height"
-      android:layout_gravity="center_vertical"
+      style="@style/Rating.ActionButton"
       android:layout_marginTop="22dp"
       android:layout_marginEnd="10dp"
-      android:maxWidth="150dp"
-      android:minWidth="80dp"
       android:text="@string/rate_us_yes"
-      android:textColor="@color/dialog_buy_value_text"
-      android:textSize="14sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/title"
       />
 
   <Button
       android:id="@+id/no_button"
-      style="@style/CancelBorderlessButtonStyle"
-      android:layout_width="wrap_content"
-      android:layout_height="@dimen/button_height"
-      android:layout_gravity="center_vertical"
-      android:maxWidth="150dp"
-      android:minWidth="80dp"
+      style="@style/Rating.ActionButton"
       android:text="@string/rate_us_no"
-      android:textColor="@color/dialog_buy_value_text"
-      android:textSize="14sp"
       app:layout_constraintEnd_toStartOf="@+id/yes_button"
       app:layout_constraintTop_toTopOf="@+id/yes_button"
       />
